<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme"
                android:theme="@style/AppTheme">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColorHint="@color/textColorSecondary"
                        android:theme="@style/AppTheme" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_birthdate"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/textColorSecondary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/birthtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_birthtime"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="time"
                        android:ems="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/textColorSecondary" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_birthtimenot"
                        android:id="@+id/birthtimenot"
                        android:textColor="@color/secondary_text_material_dark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:baselineAligned="false"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prompt_country"
                        android:id="@+id/textView"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="12dp" />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_country"
                        android:hint="@string/prompt_country"
                        android:prompt="@string/prompt_country"
                        android:layout_gravity="center_horizontal"
                        android:popupBackground="@color/windowBackground"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:clickable="true" />
                    <!--<EditText-->
                        <!--android:id="@+id/country"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/prompt_country"-->
                        <!--android:imeActionId="@+id/login"-->
                        <!--android:imeActionLabel="@string/action_sign_in_short"-->
                        <!--android:imeOptions="actionUnspecified"-->
                        <!--android:inputType="textAutoComplete"-->
                        <!--android:maxLines="1"-->
                        <!--android:singleLine="true" />-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="CITY"
                        android:id="@+id/lblCity"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="12dp" />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_city"
                        android:hint="@string/prompt_country"
                        android:prompt="@string/prompt_country"
                        android:layout_gravity="center_horizontal"
                        android:popupBackground="@color/windowBackground"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:clickable="false" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_longitude"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_latitude"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/timezone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_timezone"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tableLayout"
                    android:gravity="bottom"
                    android:layout_gravity="bottom">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_submit"
                            android:id="@+id/submit_button"
                            android:layout_weight="1"
                            style="@style/AppTheme.MyButton"
                            android:layout_marginTop="16dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_advanced"
                            android:id="@+id/advanced_button"
                            android:layout_weight="1"
                            style="@style/AppTheme.MyButton"
                            android:layout_column="2"
                            android:layout_marginTop="16dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>
                    </TableRow>
                </TableLayout>

                <!--<RelativeLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:clipChildren="false"-->
                    <!--android:clipToPadding="false"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<Button-->
                        <!--android:id="@+id/submit_button"-->
                        <!--style="@style/AppTheme.MyButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="16dp"-->
                        <!--android:text="@string/action_submit"-->
                        <!--android:layout_alignParentStart="false"-->
                        <!--android:layout_alignParentEnd="false"-->
                        <!--android:layout_marginLeft="12dp"-->
                        <!--android:layout_marginRight="12dp" />-->
                    <!--<Button-->
                        <!--android:id="@+id/advanced_button"-->
                        <!--style="@style/AppTheme.MyButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="16dp"-->
                        <!--android:text="@string/action_advanced"-->
                        <!--android:layout_toEndOf="@id/submit_button"-->
                        <!--android:enabled="true"-->
                        <!--android:layout_alignParentEnd="false"-->
                        <!--android:layout_marginLeft="12dp"-->
                        <!--android:layout_marginRight="12dp" />-->

                <!--</RelativeLayout>-->


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
